2008-06-04  Michael Goffioul  <michael.goffioul@gmail.com>

	* plot/__go_draw_axes__.m: Support hggroup objects.
	* plot/hggroup.m: New file.
	* plot/Makefile.in: Handle it.

2008-06-02  David Bateman  <dbateman@free.fr>

	* miscellaneous/debug.m: New file..
	* Makefile.in (SOURCES): Add it to the list.

	* general/interp1q.m: Remove spaces between functions and args in
	[]. Fix test code to actually test interp1q.

2008-06-02  Jaroslav Hajek <highegg@gmail.com>

	* strings/strcat.m: Add tests.

2008-06-02  Kim Hansen  <kimhanse@gmail.com>

	* strings/mat2str.m: Change is_complex to iscomplex, add tests, add
	missing ;

2008-05-20  David Bateman  <dbateman@free.fr>

	* miscellaneous/single.m: Remove.
	* Makefile.in (SOURCES): Remove it here as well.

2008-05-20  David Bateman  <dbateman@free.fr>

	* general/interp1q.m: New function.
	* general/Makefile.in (SOURCES): Add it here.

2008-05-20  Bill Denney  <bill@denney.ws>

	* time/datenum.m: Allow mixed scalar and vector/matrix input.
	New tests.

2008-05-19  John W. Eaton  <jwe@octave.org>

	* general/isa.m: Fix tests.

2008-05-13  Bill Denney  <bill@denney.ws>

	* general/isa.m: Use persistent cell arrays to hold class names
	instead of multiple strcmp calls.

2008-05-12  David Bateman  <dbateman@free.fr>

	* control/base/__stepimp__.m, control/base/bode_bounds.m,
	control/base/damp.m, control/base/dlqr.m, control/base/lsim.m,
	control/base/tzero.m, control/hinf/hinfsyn.m,
	control/hinf/is_dgkf.m, control/system/d2c.m,
	control/system/is_controllable.m, control/system/is_detectable.m,
	control/system/is_stabilizable.m, control/system/is_stable.m,
	control/system/sysconnect.m, general/bicubic.m,
	general/cplxpair.m, general/isdefinite.m, general/issymmetric.m,
	general/quadgk.m, general/quadl.m, general/quadv.m,
	geometry/delaunayn.m, linear-algebra/krylov.m,
	linear-algebra/null.m, linear-algebra/onenormest.m,
	linear-algebra/orth.m, linear-algebra/rank.m,