@@ -1,3 +1,7 @@
+2008-06-05  Jaroslav Hajek <highegg@gmail.com>
+
+	* plot/__go_draw_axes__.m: Use fprintf for formatted output.
+
 2008-06-04  Michael Goffioul  <michael.goffioul@gmail.com>
 
 	* plot/__go_draw_axes__.m: Support hggroup objects.
